# training-python-craft

./: .coverage  .gitignore  Makefile  NOTES.md  README.md  cli.py  docker-compose.yml  pyproject.toml  tach.toml
diagrams/: add_ons_process.puml  c4_components.puml  role_object.puml
subscriptions/: main.py  settings.py
subscriptions/accounts/: __init__.py  _account.py  _facade.py  _role_objects.py  _views.py
subscriptions/accounts/_app/: _facade.py
subscriptions/accounts/_web/: _views.py
subscriptions/api/: __init__.py  app.py  jwt.py  multitenancy.py
subscriptions/auth/: __init__.py  _requires_role.py  _subject.py
subscriptions/payments/: __init__.py  _customer.py  _facade.py  _payment.py  _stripe_gateway.py  _views.py
subscriptions/payments/_app/: _facade.py
subscriptions/payments/_domain/: _payment.py
subscriptions/payments/_web/: _views.py
subscriptions/plans/: __init__.py  _add_on.py  _facade.py  _plan.py  _plan_dto.py  _repository.py  _views.py
subscriptions/plans/_add_ons/: _flat_price_add_on.py  _not_found.py  (+3 more)
subscriptions/shared/: account_id.py  money.py  outbox.py  sqlalchemy.py  tenant_id.py  term.py
subscriptions/subscriptions/: __init__.py  _facade.py  _renewal_calculation.py  _repository.py  _subscription.py  _subscription_factory.py  _views.py
templates/: payment_details.html  payment_details_saved.html
tests/: conftest.py
tests/api/: test_jwt.py
tests/e2e/: test_subscribing.py
tests/plans/: test_plan.py
tests/shared/: test_money.py  test_outbox.py
tests/subscriptions/: test_facade.py  test_subscription.py
(+24 files in other folders)
