[project]
name = "subscriptions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.3",
    "kombu>=5.4.2",
    "lagom>=2.6.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.2",
    "pyee>=12.0.0",
    "pyjwt>=2.9.0",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.36",
    "stripe>=11.2.0",
    "temporalio>=1.8.0",
    "typer>=0.12.5",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "tach>=0.14.1",
    "time-machine>=2.16.0",
    "types-python-dateutil>=2.9.0.20241003",
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"

